# sonicmatch

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  README.md  audio.py  embeddings.py  main.py  models.py  pyproject.toml  qdrant.py  umap.py  umap_coords.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/upload/: page.tsx
frontend/components/: ScatterPlot.tsx  SongList.tsx  UploadZone.tsx  Waveform.tsx
