[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.0",
    "joblib>=1.5.3",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "python-multipart>=0.0.26",
    "qdrant-client>=1.17.1",
    "scikit-learn>=1.7.2",
    "umap-learn>=0.5.12",
    "uvicorn>=0.44.0",
]
